# healthcare_hackathon_2025

./: .gitignore  mock.txt  package-lock.json  pitch.md  readme.md
backend/: README.md  example.env  healthcare.db  main.py  pyproject.toml
backend/src/: api.py  config.py  db.py  embeddings.py  graph.py  healthimaging.py  healthlake.py  healthomics.py  llm.py  questionsgraph.py  state.py  tools.py  utils.py
backend/src/clients/: embeddings.py  healthimaging.py  healthlake.py  healthomics.py  llm.py
backend/src/graphs/: chatgraph.py  dashboardgraph.py  dietgraph.py  epa.py  graph.py  questionsgraph.py  summarizationgraph.py
backend/src/routes/: __init__.py  calendar.py  calender.py  conversations.py  daily.py  dashboard.py  diet.py  documents.py  user.py
backend/src/tools/: __init__.py  calendar.py  diet.py  rag.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  websocket.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/chat/: Chat.tsx
frontend/src/components/chatbot/: chatbot.tsx  messages.tsx
frontend/src/components/footer/: footer.tsx
frontend/src/components/line-chart/: line-chart.tsx
frontend/src/components/navbar/: Navbar.tsx  navbar.tsx
frontend/src/contexts/: AuthContext.tsx  index.ts
frontend/src/hooks/: useAuthedMutation.ts  useAuthedQuery.ts
frontend/src/router/: index.tsx
frontend/src/views/: DailyQuestions.tsx  FoodPlanner.tsx  Home.tsx  LoginScreen.tsx  RegisterScreen.tsx  SetupScreen.tsx
(+4 files in other folders)
