[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.64",
    "fastapi>=0.120.4",
    "langchain-aws>=1.0.0",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
main = "my_project.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
